--- a/arch/arm/configs/nvmcm_defconfig
+++ b/arch/arm/configs/nvmcm_defconfig
@@ -42,8 +42,8 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v9.3-03022017"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION=".nevermore-v9.3-04022017"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -89,10 +89,8 @@ CONFIG_RCU_FANOUT=32
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
-CONFIG_CGROUP_TIMER_SLACK=y		
-CONFIG_CGROUP_DYNAMIC_TIMER_SLACK=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
@@ -159,7 +157,9 @@ CONFIG_SLUB=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
-# CONFIG_JUMP_LABEL is not set
+CONFIG_JUMP_LABEL=y
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
+CONFIG_ARCH_USE_BUILTIN_BSWAP=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
@@ -175,12 +175,7 @@ CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-CONFIG_MODULE_FORCE_LOAD=y				
-CONFIG_MODULE_UNLOAD=y				
-CONFIG_MODULE_FORCE_UNLOAD=y				
-# CONFIG_MODVERSIONS is not set				
-# CONFIG_MODULE_SRCVERSION_ALL is not set
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -423,7 +418,7 @@ CONFIG_EXYNOS_DEV_TMU=y
 # CONFIG_EXYNOS_TMU is not set
 CONFIG_EXYNOS5410_BTS=y
 CONFIG_EXYNOS5_CLUSTER_POWER_CONTROL=y
-CONFIG_EXYNOS5410_DEBUG=y
+# CONFIG_EXYNOS5410_DEBUG is not set
 CONFIG_EXYNOS5_C2_STATE_IDLE=y
 CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG=y
 # CONFIG_ASV_MARGIN_TEST is not set
@@ -497,7 +492,7 @@ CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 # CONFIG_SWITCH_DUAL_MODEM is not set
-CONFIG_SEC_MISC=y
+# CONFIG_SEC_MISC is not set
 
 #
 # Qualcomm Modem Feature
@@ -532,14 +527,14 @@ CONFIG_INTERNAL_ISP_START_CAMERA=y
 CONFIG_SEC_LOG=y
 CONFIG_SEC_LOG_NONCACHED=y
 # CONFIG_SEC_LOG_LAST_KMSG is not set
-CONFIG_TIMA_DEBUG_LOG=y
+# CONFIG_TIMA_DEBUG_LOG is not set
 # CONFIG_KOR_B10_DEBUG is not set
 
 #
 # PowerManagement Feature
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM_DEBUG is not set
 CONFIG_SEC_THERMISTOR=y
 # CONFIG_USE_GPIO_AP_MCU_RXTXD is not set
 CONFIG_USE_NFC_IRQ_REV01=y
@@ -671,7 +666,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
-CONFIG_DYNAMIC_PAGE_WRITEBACK is not set
+CONFIG_DYNAMIC_PAGE_WRITEBACK=y
 CONFIG_FRONTSWAP=y
 CONFIG_ZSMALLOC_NEW=y
 CONFIG_PGTABLE_MAPPING=y
@@ -687,6 +682,8 @@ CONFIG_MIN_DIRTY_THRESH_PAGES=2560
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
@@ -911,7 +908,7 @@ CONFIG_INET6_XFRM_MODE_BEET=y
 CONFIG_IPV6_SIT=y
 # CONFIG_IPV6_SIT_6RD is not set
 CONFIG_IPV6_NDISC_NODETYPE=y
-CONFIG_IPV6_TUNNEL=y
+# CONFIG_IPV6_TUNNEL is not set
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 # CONFIG_IPV6_MROUTE is not set
@@ -985,7 +982,7 @@ CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 CONFIG_NETFILTER_XT_TARGET_TEE=y
 # CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
-CONFIG_NETFILTER_XT_TARGET_TRACE=y
+# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
@@ -996,7 +993,7 @@ CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_MATCH_ADDRTYPE is not set
 # CONFIG_NETFILTER_XT_MATCH_CLUSTER is not set
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
-CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
+# CONFIG_NETFILTER_XT_MATCH_CONNBYTES is not set
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
@@ -1052,7 +1049,7 @@ CONFIG_IP_NF_MATCH_ECN=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
-CONFIG_IP_NF_TARGET_REJECT_SKERR=y
+# CONFIG_IP_NF_TARGET_REJECT_SKERR is not set
 # CONFIG_IP_NF_TARGET_ULOG is not set
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
@@ -1099,7 +1096,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
-CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
+# CONFIG_IP6_NF_TARGET_REJECT_SKERR is not set
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
@@ -1470,39 +1467,7 @@ CONFIG_TUN=y
 #
 # CAIF transport drivers
 #
-CONFIG_ETHERNET=y
-CONFIG_NET_VENDOR_BROADCOM=y				
-# CONFIG_B44 is not set				
-# CONFIG_NET_CALXEDA_XGMAC is not set				
-CONFIG_NET_VENDOR_CHELSIO=y				
-CONFIG_NET_VENDOR_CIRRUS=y				
-# CONFIG_CS89x0 is not set				
-# CONFIG_DM9000 is not set				
-# CONFIG_DNET is not set				
-CONFIG_NET_VENDOR_FARADAY=y				
-# CONFIG_FTMAC100 is not set				
-# CONFIG_FTGMAC100 is not set				
-CONFIG_NET_VENDOR_INTEL=y				
-CONFIG_NET_VENDOR_I825XX=y				
-CONFIG_NET_VENDOR_MARVELL=y				
-CONFIG_NET_VENDOR_MICREL=y				
-# CONFIG_KS8842 is not set				
-# CONFIG_KS8851 is not set				
-# CONFIG_KS8851_MLL is not set				
-CONFIG_NET_VENDOR_MICROCHIP=y				
-# CONFIG_ENC28J60 is not set				
-CONFIG_NET_VENDOR_NATSEMI=y				
-CONFIG_NET_VENDOR_8390=y				
-# CONFIG_AX88796 is not set				
-# CONFIG_ETHOC is not set				
-CONFIG_NET_VENDOR_SEEQ=y				
-# CONFIG_SEEQ8005 is not set				
-CONFIG_NET_VENDOR_SMSC=y				
-# CONFIG_SMC91X is not set				
-# CONFIG_SMC911X is not set				
-# CONFIG_SMSC911X is not set				
-CONFIG_NET_VENDOR_STMICRO=y				
-# CONFIG_STMMAC_ETH is not set
+# CONFIG_ETHERNET is not set
 # CONFIG_PHYLIB is not set
 # CONFIG_MICREL_KS8995MA is not set
 CONFIG_PPP=y
@@ -2311,7 +2276,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_S3C=y
 CONFIG_FB_MIPI_DSIM=y
-CONFIG_FB_MIPI_DSIM_DBG=y
+# CONFIG_FB_MIPI_DSIM_DBG is not set
 # CONFIG_FB_I80_COMMAND_MODE is not set
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_S5P_MDNIE_PWM is not set
@@ -2411,7 +2376,7 @@ CONFIG_SND_SOC_ADONISUNIV_WM5102=y
 # CONFIG_SND_SOC_ADONISUNIV_YMU831_SLSI is not set
 CONFIG_SND_SAMSUNG_USE_IDMA=y
 CONFIG_SND_SAMSUNG_ALP=y
-CONFIG_SND_SAMSUNG_RP_DEBUG=y
+# CONFIG_SND_SAMSUNG_RP_DEBUG is not set
 # CONFIG_SND_SAMSUNG_I2S_MASTER is not set
 # CONFIG_SND_DUOS_MODEM_SWITCH is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
@@ -2494,7 +2459,7 @@ CONFIG_USB_EHCI_S5P=y
 # USB Device Class drivers
 #
 # CONFIG_USB_ACM is not set
-CONFIG_USB_PRINTER=y
+# CONFIG_USB_PRINTER is not set
 # CONFIG_USB_WDM is not set
 # CONFIG_USB_TMC is not set
 
@@ -2663,7 +2628,6 @@ CONFIG_USB_OTG_UTILS=y
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
-CONFIG_MMC_SUPPORT_STLOG=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
@@ -2871,7 +2835,6 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
-CONFIG_LOGCAT_SIZE=256
 CONFIG_ANDROID_PERSISTENT_RAM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 # CONFIG_PERSISTENT_TRACER is not set
@@ -3078,34 +3041,7 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
-CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
-CONFIG_NFS_V3=y
-CONFIG_NFS_V3_ACL=y
-CONFIG_NFS_V4=y
-# CONFIG_NFS_V4_1 is not set
-# CONFIG_ROOT_NFS is not set
-# CONFIG_NFS_USE_LEGACY_DNS is not set
-CONFIG_NFS_USE_KERNEL_DNS=y
-# CONFIG_NFSD is not set
-CONFIG_LOCKD=y
-CONFIG_LOCKD_V4=y
-CONFIG_NFS_ACL_SUPPORT=y
-CONFIG_NFS_COMMON=y
-CONFIG_SUNRPC=y
-CONFIG_SUNRPC_GSS=y
-# CONFIG_SUNRPC_DEBUG is not set
-# CONFIG_CEPH_FS is not set
-CONFIG_CIFS=y
-# CONFIG_CIFS_STATS is not set
-# CONFIG_CIFS_WEAK_PW_HASH is not set
-# CONFIG_CIFS_UPCALL is not set
-# CONFIG_CIFS_XATTR is not set
-# CONFIG_CIFS_DEBUG2 is not set
-# CONFIG_CIFS_DFS_UPCALL is not set
-# CONFIG_NCP_FS is not set
-# CONFIG_CODA_FS is not set
-# CONFIG_AFS_FS is not set
+# CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
 CONFIG_NLS_CODEPAGE_437=y
@@ -3159,7 +3095,7 @@ CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=1024
-CONFIG_MAGIC_SYSRQ=y
+# CONFIG_MAGIC_SYSRQ is not set
 CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_DEBUG_FS=y
@@ -3177,8 +3113,8 @@ CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
-CONFIG_SCHED_DEBUG=y
-CONFIG_SCHEDSTATS=y
+# CONFIG_SCHED_DEBUG is not set
+# CONFIG_SCHEDSTATS is not set
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
@@ -3198,12 +3134,12 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
-CONFIG_DEBUG_LIST=y
+# CONFIG_DEBUG_LIST is not set
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_DEBUG_SG is not set
 # CONFIG_DEBUG_NOTIFIERS is not set
@@ -3246,6 +3182,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
+CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_DYNAMIC_DEBUG is not set
@@ -3257,7 +3194,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
-CONFIG_DEBUG_USER=y
+# CONFIG_DEBUG_USER is not set
 # CONFIG_DEBUG_RODATA is not set
 # CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
@@ -3272,7 +3209,6 @@ CONFIG_DEBUG_USER=y
 #
 CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
-CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
@@ -3320,7 +3256,6 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
 # Authenticated Encryption with Associated Data
@@ -3373,14 +3308,12 @@ CONFIG_CRYPTO_SHA512_ARM_NEON=y
 #
 CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_AES_ARM=y
-CONFIG_CRYPTO_AES_ARM_BS=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
 # CONFIG_CRYPTO_CAMELLIA is not set
 # CONFIG_CRYPTO_CAST5 is not set
 # CONFIG_CRYPTO_CAST6 is not set
-CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_FCRYPT is not set
 # CONFIG_CRYPTO_KHAZAD is not set
 # CONFIG_CRYPTO_SALSA20 is not set
@@ -3431,15 +3364,6 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
-CONFIG_XZ_DEC=y		
-CONFIG_XZ_DEC_X86=y		
-CONFIG_XZ_DEC_POWERPC=y		
-CONFIG_XZ_DEC_IA64=y		
-CONFIG_XZ_DEC_ARM=y		
-CONFIG_XZ_DEC_ARMTHUMB=y		
-CONFIG_XZ_DEC_SPARC=y		
-CONFIG_XZ_DEC_BCJ=y		
-# CONFIG_XZ_DEC_TEST is not set
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_LZMA=y
 CONFIG_DECOMPRESS_XZ=y
