--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -19,7 +19,6 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
-CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -40,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v9.3-03022017"
+CONFIG_LOCALVERSION=".nevermore-v9.3-04022017"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -87,10 +86,9 @@ CONFIG_RCU_FANOUT=32
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_TIMER_SLACK=y
-CONFIG_CGROUP_DYNAMIC_TIMER_SLACK=y
+#CONFIG_CGROUP_DYNAMIC_TIMER_SLACK=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
@@ -151,7 +149,7 @@ CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
-CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y		
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_ARCH_USE_BUILTIN_BSWAP=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -168,11 +166,11 @@ CONFIG_HAVE_ARCH_JUMP_LABEL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y		
-CONFIG_MODULE_FORCE_LOAD=y		
-CONFIG_MODULE_UNLOAD=y		
-CONFIG_MODULE_FORCE_UNLOAD=y		
-# CONFIG_MODVERSIONS is not set		
+CONFIG_MODULES=y
+CONFIG_MODULE_FORCE_LOAD=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+# CONFIG_MODVERSIONS is not set
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
@@ -202,7 +200,6 @@ CONFIG_MSDOS_PARTITION=y
 # CONFIG_KARMA_PARTITION is not set
 CONFIG_EFI_PARTITION=y
 # CONFIG_SYSV68_PARTITION is not set
-CONFIG_BLOCK_SUPPORT_STLOG=y
 
 #
 # IO Schedulers
@@ -417,7 +414,6 @@ CONFIG_EXYNOS_DEV_TMU=y
 # CONFIG_EXYNOS_TMU is not set
 CONFIG_EXYNOS5410_BTS=y
 CONFIG_EXYNOS5_CLUSTER_POWER_CONTROL=y
-CONFIG_EXYNOS5410_DEBUG=y
 CONFIG_EXYNOS5_C2_STATE_IDLE=y
 CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG=y
 # CONFIG_ASV_MARGIN_TEST is not set
@@ -526,14 +522,12 @@ CONFIG_INTERNAL_ISP_START_CAMERA=y
 CONFIG_SEC_LOG=y
 CONFIG_SEC_LOG_NONCACHED=y
 # CONFIG_SEC_LOG_LAST_KMSG is not set
-CONFIG_TIMA_DEBUG_LOG=y
 # CONFIG_KOR_B10_DEBUG is not set
 
 #
 # PowerManagement Feature
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
 CONFIG_SEC_THERMISTOR=y
 # CONFIG_USE_GPIO_AP_MCU_RXTXD is not set
 CONFIG_USE_NFC_IRQ_REV01=y
@@ -681,7 +675,7 @@ CONFIG_MIN_DIRTY_THRESH_PAGES=2560
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
-CONFIG_ARM_PLD_64BYTE=y		
+CONFIG_ARM_PLD_64BYTE=y
 CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -905,7 +899,6 @@ CONFIG_INET6_XFRM_MODE_BEET=y
 CONFIG_IPV6_SIT=y
 # CONFIG_IPV6_SIT_6RD is not set
 CONFIG_IPV6_NDISC_NODETYPE=y
-CONFIG_IPV6_TUNNEL=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
@@ -977,8 +970,6 @@ CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_NOTRACK is not set
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
-CONFIG_NETFILTER_XT_TARGET_TPROXY=y		
-CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
@@ -989,7 +980,6 @@ CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_MATCH_ADDRTYPE is not set
 # CONFIG_NETFILTER_XT_MATCH_CLUSTER is not set
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
-CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
@@ -1045,7 +1035,6 @@ CONFIG_IP_NF_MATCH_ECN=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
-CONFIG_IP_NF_TARGET_REJECT_SKERR=y
 # CONFIG_IP_NF_TARGET_ULOG is not set
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
@@ -1092,7 +1081,6 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
-CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
@@ -1453,39 +1441,6 @@ CONFIG_TUN=y
 #
 # CAIF transport drivers
 #
-CONFIG_ETHERNET=y		
-CONFIG_NET_VENDOR_BROADCOM=y		
-# CONFIG_B44 is not set		
-# CONFIG_NET_CALXEDA_XGMAC is not set		
-CONFIG_NET_VENDOR_CHELSIO=y		
-CONFIG_NET_VENDOR_CIRRUS=y		
-# CONFIG_CS89x0 is not set		
-# CONFIG_DM9000 is not set		
-# CONFIG_DNET is not set		
-CONFIG_NET_VENDOR_FARADAY=y		
-# CONFIG_FTMAC100 is not set		
-# CONFIG_FTGMAC100 is not set		
-CONFIG_NET_VENDOR_INTEL=y		
-CONFIG_NET_VENDOR_I825XX=y		
-CONFIG_NET_VENDOR_MARVELL=y		
-CONFIG_NET_VENDOR_MICREL=y		
-# CONFIG_KS8842 is not set		
-# CONFIG_KS8851 is not set		
-# CONFIG_KS8851_MLL is not set		
-CONFIG_NET_VENDOR_MICROCHIP=y		
-# CONFIG_ENC28J60 is not set		
-CONFIG_NET_VENDOR_NATSEMI=y		
-CONFIG_NET_VENDOR_8390=y		
-# CONFIG_AX88796 is not set		
-# CONFIG_ETHOC is not set		
-CONFIG_NET_VENDOR_SEEQ=y		
-# CONFIG_SEEQ8005 is not set		
-CONFIG_NET_VENDOR_SMSC=y		
-# CONFIG_SMC91X is not set		
-# CONFIG_SMC911X is not set		
-# CONFIG_SMSC911X is not set		
-CONFIG_NET_VENDOR_STMICRO=y		
-# CONFIG_STMMAC_ETH is not set
 # CONFIG_PHYLIB is not set
 # CONFIG_MICREL_KS8995MA is not set
 CONFIG_PPP=y
@@ -2038,7 +1993,7 @@ CONFIG_VIDEO_MEDIA=y
 #
 CONFIG_RC_CORE=y
 CONFIG_LIRC=y
-CONFIG_RC_MAP=y
+# CONFIG_RC_MAP is not set
 CONFIG_IR_NEC_DECODER=y
 CONFIG_IR_RC5_DECODER=y
 CONFIG_IR_RC6_DECODER=y
@@ -2200,23 +2155,6 @@ CONFIG_VISION_MODE=y
 #
 # CONFIG_VIDEO_THS7303 is not set
 # CONFIG_VIDEO_M52790 is not set
-CONFIG_V4L_USB_DRIVERS=y		
-# CONFIG_USB_VIDEO_CLASS is not set		
-CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y		
-# CONFIG_USB_GSPCA is not set		
-# CONFIG_VIDEO_PVRUSB2 is not set		
-# CONFIG_VIDEO_HDPVR is not set		
-# CONFIG_VIDEO_EM28XX is not set		
-# CONFIG_VIDEO_CX231XX is not set		
-# CONFIG_VIDEO_TM6000 is not set		
-# CONFIG_VIDEO_USBVISION is not set		
-# CONFIG_USB_ET61X251 is not set		
-# CONFIG_USB_SN9C102 is not set		
-# CONFIG_USB_PWC is not set		
-# CONFIG_VIDEO_CPIA2 is not set		
-# CONFIG_USB_ZR364XX is not set		
-# CONFIG_USB_STKWEBCAM is not set		
-# CONFIG_USB_S2255 is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 CONFIG_VIDEO_EXYNOS=y
 CONFIG_EXYNOS_MEDIA_DEVICE=y
@@ -2258,7 +2196,6 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_VIDEO_SAMSUNG_S5P_MFC is not set
 # CONFIG_TDMB is not set
 # CONFIG_ISDBTMM is not set
-CONFIG_RADIO_ADAPTERS=y
 
 #
 # Graphics support
@@ -2316,7 +2253,6 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_S3C=y
 CONFIG_FB_MIPI_DSIM=y
-CONFIG_FB_MIPI_DSIM_DBG=y
 # CONFIG_FB_I80_COMMAND_MODE is not set
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_S5P_MDNIE_PWM is not set
@@ -2374,8 +2310,6 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
-CONFIG_SND_HWDEP=y		
-CONFIG_SND_RAWMIDI=y
 CONFIG_SND_JACK=y
 # CONFIG_SND_SEQUENCER is not set
 # CONFIG_SND_MIXER_OSS is not set
@@ -2401,7 +2335,6 @@ CONFIG_SND_ARM=y
 # CONFIG_SND_ARMAACI is not set
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
-CONFIG_SND_USB_AUDIO=y
 # CONFIG_SND_USB_UA101 is not set
 # CONFIG_SND_USB_CAIAQ is not set
 # CONFIG_SND_USB_6FIRE is not set
@@ -2416,7 +2349,6 @@ CONFIG_SND_SOC_ADONISUNIV_WM5102=y
 # CONFIG_SND_SOC_ADONISUNIV_YMU831_SLSI is not set
 CONFIG_SND_SAMSUNG_USE_IDMA=y
 CONFIG_SND_SAMSUNG_ALP=y
-CONFIG_SND_SAMSUNG_RP_DEBUG=y
 # CONFIG_SND_SAMSUNG_I2S_MASTER is not set
 # CONFIG_SND_DUOS_MODEM_SWITCH is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
@@ -2695,7 +2627,6 @@ CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 # CONFIG_USB_RNDIS_MULTI_PACKET is not set
 CONFIG_USB_DUN_SUPPORT=y
-CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
 # CONFIG_USB_G_ACM_MS is not set
@@ -2714,7 +2645,6 @@ CONFIG_USB_OTG_UTILS=y
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
-CONFIG_MMC_SUPPORT_STLOG=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
@@ -2925,7 +2855,6 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
-CONFIG_LOGCAT_SIZE=256
 CONFIG_ANDROID_PERSISTENT_RAM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 # CONFIG_PERSISTENT_TRACER is not set
@@ -3214,8 +3143,7 @@ CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
-CONFIG_SCHED_DEBUG=y
-CONFIG_SCHEDSTATS=y
+# CONFIG_SCHEDSTATS is not set
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
@@ -3235,12 +3163,10 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
-CONFIG_DEBUG_LIST=y
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_DEBUG_SG is not set
 # CONFIG_DEBUG_NOTIFIERS is not set
@@ -3284,6 +3210,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
 CONFIG_BLK_DEV_IO_TRACE=y
+# CONFIG_BLK_DEV_IO_TRACE is not set
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_DYNAMIC_DEBUG is not set
@@ -3295,7 +3222,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
-CONFIG_DEBUG_USER=y
+# CONFIG_DEBUG_USER is not set
 # CONFIG_DEBUG_RODATA is not set
 # CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
@@ -3310,7 +3237,7 @@ CONFIG_DEBUG_USER=y
 #
 CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
-CONFIG_KEYS_DEBUG_PROC_KEYS=y
+# CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
@@ -3357,10 +3284,8 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 # CONFIG_CRYPTO_NULL is not set
 # CONFIG_CRYPTO_PCRYPT is not set
 CONFIG_CRYPTO_WORKQUEUE=y
-CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
 # CONFIG_CRYPTO_TEST is not set
-CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
 # Authenticated Encryption with Associated Data
@@ -3392,7 +3317,7 @@ CONFIG_CRYPTO_HMAC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
-CONFIG_CRYPTO_MD4=y
+# CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
@@ -3413,7 +3338,6 @@ CONFIG_CRYPTO_SHA512_ARM_NEON=y
 #
 CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_AES_ARM=y
-CONFIG_CRYPTO_AES_ARM_BS=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
