--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermoretw-v9.7-21022017"
+CONFIG_LOCALVERSION=".NevermoreX-TW"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -721,10 +721,10 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
-# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_SEC=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
