--- a/arch/arm/configs/nvmcm_defconfig
+++ b/arch/arm/configs/nvmcm_defconfig
@@ -208,13 +208,17 @@ CONFIG_EFI_PARTITION=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_FIFO=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_TRIPNDROID=y
 # CONFIG_CGROUP_BFQIO is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_NOOP is not set
@@ -741,11 +745,9 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-# CONFIG_CPU_FREQ_GOV_IMPULSE is not se
-CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
-CONFIG_CPU_FREQ_GOV_BADASS=y
-# CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 # CONFIG_CPUFREQ_ID_PERFLOCK is not set
 # CONFIG_INTELLI_MAX_ACTIVE_FREQ is not set
 # CONFIG_INTELLI_MAX_INACTIVE_FREQ is not set
@@ -753,6 +755,12 @@ CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 
 #
 # ARM CPU frequency scaling drivers
