--- a/drivers/cpufreq/Makefile
+++ b/drivers/cpufreq/Makefile
@@ -24,6 +24,12 @@ obj-$(CONFIG_CPU_FREQ_GOV_LIONHEART)		+= cpufreq_lionheart.o
 obj-$(CONFIG_CPU_FREQ_GOV_DARKNESS)		+= cpufreq_darkness.o
 obj-$(CONFIG_CPU_FREQ_GOV_INTELLIMM)	        += cpufreq_intellimm.o
 obj-$(CONFIG_CPU_FREQ_GOV_INTELLIMM)	        += cpufreq_alucard.o
+obj-$(CONFIG_CPU_FREQ_GOV_ZZMOOVE)      +=	cpufreq_zzmoove.o
+obj-$(CONFIG_CPU_FREQ_GOV_INTERACTIVEX)	+=	cpufreq_interactivex.o
+obj-$(CONFIG_CPU_FREQ_GOV_CONSERVATIVEX)	+=	cpufreq_conservativex.o
+obj-$(CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS)	+=	cpufreq_ondemandplus.o
+obj-$(CONFIG_CPU_FREQ_GOV_DANCEDANCE)	+=	cpufreq_dancedance.o
+obj-$(CONFIG_CPU_FREQ_GOV_PEGASUSQ)	+=	cpufreq_pegasusq.o
 
 
 
